# secret-multicall

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
artifacts/: multicall@HEAD.wasm.sha256
contracts/multicall/: .gitignore  Cargo.toml
contracts/multicall/src/: contract.rs  error.rs  lib.rs  msg.rs  querier.rs
examples/latest/: index.js  package-lock.json  package.json
examples/legacy/: index.js  package-lock.json  package.json
scripts/: build.ts  deploy.ts
src/: lib.rs  state.rs
src/interfaces/: mod.rs  multicall.rs
src/tests/: mod.rs  setup.rs  tests.rs
